--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -33,7 +33,7 @@
 		{
 			"label": "copy",
 			"type": "shell",
-			"command": "until [ -d /Volumes/PSPCARD ]; do sleep 1; done && sleep 1 && cp EBOOT.PBP /Volumes/PSPCARD/PSP/GAME/Snake/ && sleep 1 && diskutil unmount /Volumes/PSPCARD",
+			"command": "until [ -d /Volumes/PSPCARD ]; do sleep 1; done && sleep 2 && cp EBOOT.PBP /Volumes/PSPCARD/PSP/GAME/Snake/ && sleep 1 && diskutil unmount /Volumes/PSPCARD",
 			"options": {
 				"cwd": "${workspaceFolder}"
 			},
@@ -44,11 +44,21 @@
 		{
 			"label": "all",
 			"dependsOrder": "sequence",
-			"dependsOn":["make", "copy", "clean"],
+			"dependsOn":["Convert image", "make", "copy", "clean"],
 			"presentation": {
 				"reveal": "silent"
 			}
+		},
+		{
+			"label": "Convert image",
+			"type": "shell",
+			"command": "python3 scripts/gimpc_to_raw.py",
+			"options": {
+				"cwd": "${workspaceFolder}"
+			},
+			"presentation": {
+				"reveal": "silent",
+			}
 		}
-
 	]
 }
